tests/baselines/reference/parserComputedPropertyName38.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName38.ts(2,6): error TS2304: Cannot find name 'public'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName38.ts (1 errors) ====
    class C {
        [public]() { }
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }